@@ -32,6 +32,7 @@
 #include "Filter.h"
 #include "xmalloc.h"
 #include "SignalHook.h"
+#include "ArgV.h"
 #include "misc.h"
 
 FDStream::FDStream(int new_fd,const char *new_name)
